<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">


    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/oldPassword"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/oldPassword"
        android:layout_marginTop="24dp"
        android:hint="@string/newPassword" />

    <EditText
        android:id="@+id/repeatNewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/newPassword"
        android:layout_marginTop="24dp"
        android:hint="@string/repeatNewPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_error"
        android:layout_below="@id/repeatNewPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_error"
        android:layout_alignParentEnd="true"
        android:id="@+id/savePasswordButton"
        android:text="@string/save"
        />
</RelativeLayout>