<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Registrazione">

        <ImageButton
            android:id="@+id/frecciaIndietro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"

            android:clickable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="termina"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/Registrazione"
            app:layout_constraintEnd_toStartOf="@+id/NomeMuseo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/Registrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"


            android:text="@string/registrazione"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/amber_dark"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NomeMuseo"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/nomeMuseo"
            android:textColorHint="@color/amber_dark_opaque"

            app:boxBackgroundColor="@color/white"


            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registrazione"
            app:startIconDrawable="@drawable/ic_baseline_museum_24"
            app:startIconTint="@color/icon_color_change">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefono"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/Telefono"
            android:textColorHint="@color/amber_dark_opaque"

            app:boxBackgroundColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/NomeMuseo"

            app:startIconDrawable="@drawable/ic_baseline_contact_phone_24"
            app:startIconTint="@color/icon_color_change"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/provincia"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/province"
            android:textColorHint="@color/amber_dark_opaque"

            app:boxBackgroundColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/telefono"

            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            app:startIconTint="@color/icon_color_change">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/citta"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/city"
            android:textColorHint="@color/amber_dark_opaque"

            app:boxBackgroundColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/provincia"

            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            app:startIconTint="@color/icon_color_change"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CAP"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/postal_code"
            android:textColorHint="@color/amber_dark_opaque"

            app:boxBackgroundColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/citta"

            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            app:startIconTint="@color/icon_color_change"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/indirizzo"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"

            android:hint="@string/address"
            android:textColorHint="@color/amber_dark_opaque"
            app:boxBackgroundColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/CAP"

            app:startIconDrawable="@drawable/ic_baseline_house_24"
            app:startIconTint="@color/icon_color_change"
            tools:layout_editor_absoluteX="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/partitaIVA"
            style="@style/loginTextInputBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"

            android:hint="@string/vat_number"
            android:textColorHint="@color/amber_dark_opaque"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indirizzo"

            app:startIconDrawable="@drawable/ic_baseline_receipt_long_24"
            app:startIconTint="@color/icon_color_change">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reindirizzamentoHome"
            android:layout_width="143dp"
            android:layout_height="55dp"
            android:layout_marginVertical="15dp"
            android:onClick="registrazione"
            android:text="@string/registrati"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partitaIVA" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>